// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project metadata renders correctly with no references 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
        >
          <span
            class="css-mmmexm-metaSection"
          >
            <span>
              <strong>
                Stars
              </strong>
              : 
              123
            </span>
          </span>
          <span
            class="css-mmmexm-metaSection"
          >
            <span>
              <strong>
                Watchers
              </strong>
              : 
              0
            </span>
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
        />
        <div
          class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
        >
          <span
            class="css-mmmexm-metaSection"
          >
            <span>
              <strong>
                Open Issues
              </strong>
              : 
              56
            </span>
          </span>
          <span
            class="css-mmmexm-metaSection"
          >
            <span>
              <strong>
                Contributors
              </strong>
              : 
              45
            </span>
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
        >
          <span
            class="css-mmmexm-metaSection"
          >
            <span>
              <strong>
                Created
              </strong>
              : 
              2023-01-01
            </span>
          </span>
          <span
            class="css-mmmexm-metaSection"
          >
            <span>
              <strong>
                Last Commit
              </strong>
              : 
              2023-03-14
            </span>
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
        >
          <span
            class="css-mmmexm-metaSection"
          >
            <span>
              <strong>
                License
              </strong>
              : 
              MIT
            </span>
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
        >
          <span
            class="css-mmmexm-metaSection"
          >
            <span>
              <strong>
                Top Programming Language
              </strong>
              : 
              Python
            </span>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
      >
        <span
          class="css-mmmexm-metaSection"
        >
          <span>
            <strong>
              Stars
            </strong>
            : 
            123
          </span>
        </span>
        <span
          class="css-mmmexm-metaSection"
        >
          <span>
            <strong>
              Watchers
            </strong>
            : 
            0
          </span>
        </span>
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
      />
      <div
        class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
      >
        <span
          class="css-mmmexm-metaSection"
        >
          <span>
            <strong>
              Open Issues
            </strong>
            : 
            56
          </span>
        </span>
        <span
          class="css-mmmexm-metaSection"
        >
          <span>
            <strong>
              Contributors
            </strong>
            : 
            45
          </span>
        </span>
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
      >
        <span
          class="css-mmmexm-metaSection"
        >
          <span>
            <strong>
              Created
            </strong>
            : 
            2023-01-01
          </span>
        </span>
        <span
          class="css-mmmexm-metaSection"
        >
          <span>
            <strong>
              Last Commit
            </strong>
            : 
            2023-03-14
          </span>
        </span>
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
      >
        <span
          class="css-mmmexm-metaSection"
        >
          <span>
            <strong>
              License
            </strong>
            : 
            MIT
          </span>
        </span>
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
      >
        <span
          class="css-mmmexm-metaSection"
        >
          <span>
            <strong>
              Top Programming Language
            </strong>
            : 
            Python
          </span>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Project metadata renders correctly with references 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
        >
          <span
            class="css-mmmexm-metaSection"
          >
            <span>
              <strong>
                Stars
              </strong>
              : 
              123
            </span>
          </span>
          <span
            class="css-mmmexm-metaSection"
          >
            <span>
              <strong>
                Watchers
              </strong>
              : 
              0
            </span>
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
        >
          <span
            class="css-mmmexm-metaSection"
          >
            <span>
              76
               references in 
              <strong>
                algebraic geometry
              </strong>
               articles
            </span>
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
        >
          <span
            class="css-mmmexm-metaSection"
          >
            <span>
              <strong>
                Open Issues
              </strong>
              : 
              56
            </span>
          </span>
          <span
            class="css-mmmexm-metaSection"
          >
            <span>
              <strong>
                Contributors
              </strong>
              : 
              45
            </span>
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
        >
          <span
            class="css-mmmexm-metaSection"
          >
            <span>
              <strong>
                Created
              </strong>
              : 
              2023-01-01
            </span>
          </span>
          <span
            class="css-mmmexm-metaSection"
          >
            <span>
              <strong>
                Last Commit
              </strong>
              : 
              2023-03-14
            </span>
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
        >
          <span
            class="css-mmmexm-metaSection"
          >
            <span>
              <strong>
                License
              </strong>
              : 
              MIT
            </span>
          </span>
        </div>
        <div
          class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
        >
          <span
            class="css-mmmexm-metaSection"
          >
            <span>
              <strong>
                Top Programming Language
              </strong>
              : 
              Python
            </span>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
      >
        <span
          class="css-mmmexm-metaSection"
        >
          <span>
            <strong>
              Stars
            </strong>
            : 
            123
          </span>
        </span>
        <span
          class="css-mmmexm-metaSection"
        >
          <span>
            <strong>
              Watchers
            </strong>
            : 
            0
          </span>
        </span>
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
      >
        <span
          class="css-mmmexm-metaSection"
        >
          <span>
            76
             references in 
            <strong>
              algebraic geometry
            </strong>
             articles
          </span>
        </span>
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
      >
        <span
          class="css-mmmexm-metaSection"
        >
          <span>
            <strong>
              Open Issues
            </strong>
            : 
            56
          </span>
        </span>
        <span
          class="css-mmmexm-metaSection"
        >
          <span>
            <strong>
              Contributors
            </strong>
            : 
            45
          </span>
        </span>
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
      >
        <span
          class="css-mmmexm-metaSection"
        >
          <span>
            <strong>
              Created
            </strong>
            : 
            2023-01-01
          </span>
        </span>
        <span
          class="css-mmmexm-metaSection"
        >
          <span>
            <strong>
              Last Commit
            </strong>
            : 
            2023-03-14
          </span>
        </span>
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
      >
        <span
          class="css-mmmexm-metaSection"
        >
          <span>
            <strong>
              License
            </strong>
            : 
            MIT
          </span>
        </span>
      </div>
      <div
        class="MuiTypography-root MuiTypography-body2 css-rqgorj-MuiTypography-root-sortOption"
      >
        <span
          class="css-mmmexm-metaSection"
        >
          <span>
            <strong>
              Top Programming Language
            </strong>
            : 
            Python
          </span>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
